# forum-system-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init_db.sql  pyproject.toml  readme.txt
.github/workflows/: main.yml
forum_system_api/: config.py  main.py
forum_system_api/api/api_v1/: api.py
forum_system_api/persistence/: database.py  init_data.py
forum_system_api/persistence/models/: access_level.py  admin.py  category.py  category_permission.py  conversation.py  message.py  reply.py  reply_reaction.py  topic.py  user.py  user_category_permission.py
forum_system_api/routers/: topic_router.py
forum_system_api/schemas/: category.py  category_permission.py  common.py  conversation.py  custom_types.py  message.py  reply.py  topic.py  user.py  validators.py
forum_system_api/services/: auth_service.py  auth_service2.py  category_service.py  common.py  conversation_service.py  message_service.py  reply_service.py  topic_service.py  user_service.py  websocket_manager.py
frontend/: vite.config.js
frontend/src/: App.jsx
tests/: config_test.py  database_test.py  password_utils_test.py
tests/models/: access_level_test.py  user_test.py
tests/routes/: auth_router_test.py  category_router_test.py  conversation_router_test.py  message_router_test.py  reply_router_test.py  topic_router_test.py  user_router_test.py  websocket_router_test.py
tests/schemas/: user_test.py
tests/services/: auth_service_test.py  category_access_utils_test.py  category_service_test.py  conversation_service_test.py  message_service_test.py  reply_service_test.py  test_data.py  test_data_const.py  test_data_obj.py  topic_service_test.py  user_service_test.py  utils.py  websocket_manager_test.py
(+13 files in other folders)
