[tool.poetry]
name = "forum-system-api"
version = "0.1.0"
description = ""
authors = ["Forum System Developers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
sqlalchemy = "^2.0.34"
databases = "^0.9.0"
psycopg2 = "^2.9.9"
uvicorn = "^0.30.6"
pydantic = "^2.9.1"
poetry-dotenv-plugin = "^0.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
email-validator = "^2.2.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
