[tool.poetry]
name = "forum-system-api"
version = "0.1.0"
description = ""
authors = ["Forum System Developers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
sqlalchemy = "^2.0.34"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
poetry-dotenv-plugin = "^0.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "==4.0.1"
python-jose = "^3.3.0"
email-validator = "^2.2.0"
python-multipart = "^0.0.12"
types-passlib = "^1.7.7.20240819"
types-python-jose = "^3.3.4.20240106"


[tool.poetry.group.dev.dependencies]
autoflake = "2.2.1" 
black = "24.10.0" 
isort = { version = "5.13.2", extras = ["colors"] }
httpx = "^0.27.2"
coverage = "^7.6.4"
mypy = "^1.13.0"


[tool.black]
exclude = '(\.git|\.mypy_cache|\.venv)'
include = '\.pyi?$'
target-version = ['py311']
line-length = 88


[tool.isort]
profile = "black"


[tool.mypy]
plugins = ["pydantic.mypy"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
